refactor(env): add new variable for smtp

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+PUBLIC_URL=xxx
 JWT_SECRET=xxx
 ADMIN_JWT_SECRET=xxx
 APP_KEYS=xxx
@@ -6,3 +7,11 @@ NODE_ENV=development
 DATABASE_NAME=xxx
 DATABASE_USERNAME=xxx
 DATABASE_PASSWORD=xxx
+
+SMTP_HOST=xxxx
+SMTP_PORT=123
+SMTP_USER=xxx
+SMTP_PASSWORD=xxx
+
+EMAIL_FROM=xxx
+REPLY_TO=xxx
