feat: add page, form and example components

--- a/app/package.json
+++ b/app/package.json
@@ -11,11 +11,18 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^2.0.4",
     "@strapi/plugin-i18n": "4.10.7",
+    "@strapi/plugin-seo": "^1.8.0",
     "@strapi/plugin-users-permissions": "4.10.7",
+    "@strapi/provider-email-nodemailer": "^4.10.5",
     "@strapi/strapi": "4.10.7",
     "better-sqlite3": "8.0.1",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "strapi-plugin-ezforms": "^0.1.5",
+    "strapi-plugin-menus": "^1.4.1",
+    "strapi-plugin-placeholder": "^4.3.6",
+    "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
     "name": "A Strapi developer"
