feat: add more strapi token config to env

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
+COMPOSE_PROJECT_NAME=pxcookie-cms
 PUBLIC_URL=xxx
 JWT_SECRET=xxx
 ADMIN_JWT_SECRET=xxx
 APP_KEYS=xxx
+API_TOKEN_SALT=xxx
+TRANSFER_TOKEN_SALT=xxx
 NODE_ENV=development
 
 DATABASE_NAME=xxx
