--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -32,13 +32,13 @@ services:
       EMAIL_FROM: ${EMAIL_FROM}
       REPLY_TO: ${REPLY_TO}
 
-    volumes:
-      - ./app/config/:/opt/app/config
-      - ./app/src/:/opt/app/src
-      - ./app/package.json:/opt/package.json
-      - ./app/yarn.lock:/opt/yarn.lock
+    # volumes:
+      # - ./app/config/:/opt/app/config
+      # - ./app/src/:/opt/app/src
+      # - ./app/package.json:/opt/package.json
+      # - ./app/yarn.lock:/opt/yarn.lock
       # - ./app/.env:/opt/app/.env
-      - ./app/public/uploads/:/opt/app/public/uploads
+      # - ./app/public/uploads/:/opt/app/public/uploads
     ports:
       - 1337:1337
     networks:
@@ -55,13 +55,13 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     ports:
       - 5555:5432
-    volumes:
-      - "./db/:/var/lib/postgresql/data"
+    #volumes:
+      #- "./db/:/var/lib/postgresql/data"
     networks:
       - strapi
 
-volumes:
-  strapi-db:
+#volumes:
+  #strapi-db:
 
 networks:
   strapi:
