--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -33,12 +33,12 @@ services:
       REPLY_TO: ${REPLY_TO}
 
     volumes:
-      - app/config/:/opt/app/config
-      - app/src/:/opt/app/src
-      - app/package.json:/opt/package.json
-      - app/yarn.lock:/opt/yarn.lock
+      - ./app/config/:/opt/app/config
+      - ./app/src/:/opt/app/src
+      - ./app/package.json:/opt/package.json
+      - ./app/yarn.lock:/opt/yarn.lock
       # - app/.env:/opt/app/.env
-      - app/public/uploads/:/opt/app/public/uploads
+      - ./app/public/uploads/:/opt/app/public/uploads
     ports:
       - 1337:1337
     networks:
@@ -56,7 +56,7 @@ services:
     ports:
       - 5555:5432
     volumes:
-      - db:/var/lib/postgresql/data
+      - ./db:/var/lib/postgresql/data
     networks:
       - strapi
 
