--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,6 +7,7 @@ services:
       context: ./app
       dockerfile: Dockerfile.dev
     restart: unless-stopped
+    env_file: .env
     environment:
       PUBLIC_URL: ${PUBLIC_URL}
       JWT_SECRET: ${JWT_SECRET}
@@ -37,6 +38,7 @@ services:
   db:
     image: postgres
     container_name: "strapi-db"
+    env_file: .env
     environment:
       POSTGRES_DB: ${DATABASE_NAME}
       POSTGRES_USER: ${DATABASE_USERNAME}
