--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,8 +21,13 @@ services:
     env_file: .env
     ports:
       - 5555:5432
+    volumes:
+      - pxcookie-db:/var/lib/postgresql/data
     networks:
       - strapi
+
+volumes:
+  pxcookie-db:
 
 networks:
   strapi:
