--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -4,6 +4,9 @@ RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev l
 ARG NODE_ENV=development
 ENV NODE_ENV=${NODE_ENV}
 
+ARG PUBLIC_URL=http://localhost:1337
+ENV PUBLIC_URL=${PUBLIC_URL}
+
 WORKDIR /opt/
 COPY package.json yarn.lock ./
 RUN yarn config set network-timeout 600000 -g && yarn install
